borrowscope-macro/tests/compile/fail/const_fn.rs
use borrowscope_macro::trace_borrow;

#[trace_borrow]
const fn example() -> i32 {
    let x = 42;
    x
}

fn main() {}
